--- a/style.css
+++ b/style.css
@@ -77,6 +77,15 @@
   color: #ababab;
 }
 
+.button-key_capslock {
+  color: white;
+  text-shadow: 0px 0px 10px white,
+  0px 0px 20px white,
+  0px 0px 30px white;
+  text-fill-color: transparent;
+  /*background-clip: text;*/
+}
+
 .button-key__text {
   pointer-events: none;
 }
