--- a/style.css
+++ b/style.css
@@ -79,11 +79,9 @@
 
 .button-key_capslock {
   color: white;
-  text-shadow: 0px 0px 10px white,
-  0px 0px 20px white,
-  0px 0px 30px white;
-  text-fill-color: transparent;
-  /*background-clip: text;*/
+  text-shadow: 0 0 10px,
+  0 0 20px,
+  0 0 30px;
 }
 
 .button-key__text {
